[package]
name = "rsd"
version = "0.1.0"
authors = ["Handshake Alliance"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/handshakealliance/rsd"
repository = "https://github.com/handshakealliance/rsd"
documentation = "https://docs.rs/rsd"
description = "A Handshake full implementation written entirely in Rust"
keywords = [ "crypto", "handshake", "dns" ]
readme = "README.md"

[dependencies]
# rust-crypto = "^0.2"
blake2 = "0.8.0"
cryptoxide = "0.1.1"
hex = "0.3.2"
sp800-185 = "0.2.0"



