[package]
name = "handshake-encoding"
version = "0.1.2"
authors = ["kilpatty <sean@urkel.io>"]
edition = "2018"
license = "MIT"
description = "Encoding Library for Handshake"

[dependencies]

# Known External - See types Cargo.lock for explanation
# extended-primitives = "^0.3.1"
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives.git"}
encodings = "0.1.0"

