[package]
name = "handshake-mining"
version = "0.1.0"
authors = ["kilpatty <sean@urkel.io>"]
edition = "2018"

[dependencies]

# Internal
handshake-primitives = { path="../primitives" }
handshake-types = { path="../types" }

# Known External
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives.git" }
