[package]
name = "handshake-net"
version = "0.1.0"
authors = ["kilpatty <sean@urkel.io>"]
edition = "2018"

[dependencies]

# Internal
handshake-types = { path="../types" }
handshake-protocol = { path="../protocol" }
handshake-primitives = {path="../primitives" }

# Known External
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives.git" }
brontide = { git="https://github.com/UrkelLabs/brontide", features = ["stream"] }

# Unknown External
chrono = "0.4.0"
base32 = "0.4.0"
hex = "0.3.2"
bitflags = "1.1.0"
romio = "0.3.0-alpha.8"
#Remove this and move to dev, if we don't use async/await in the net lib. Otherwise make this optional like we do w/ brontide
futures-preview = {version="=0.3.0-alpha.18", features = ["async-await", "nightly"] }
rand = "0.7"
log = "0.4"
fasthash = "0.4"
futures-timer = "0.2.1"
juliex = "0.3.0-alpha.6"
