[package]
name = "handshake-primitives"
version = "0.1.0"
authors = ["kilpatty <sean@urkel.io>"]
edition = "2018"

[dependencies]

# Internal
handshake-types = { path="../types" }
handshake-protocol = { path="../protocol" }
handshake-encoding = { path="../encoding" }
handshake-script = { path="../script" }

# Known External
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives.git", features=["serialization"] }

# Unknown External
cryptoxide = "0.1.1"
sp800-185 = "0.2.0"
hex = "0.3.2"
bech32 = "0.7.1"
rand = "0.7.2"
serde = { version="1.0", features=["derive"]}
serde_json = "1.0"
sha3 = "0.8.2"
