[package]
name = "handshake-primitives"
version = "0.1.0"
authors = ["kilpatty <sean@urkel.io>"]
edition = "2018"

[features]

json = ["serde"]

[dependencies]

# Internal
handshake-types = { path="../types" }
handshake-protocol = { path="../protocol" }
handshake-encoding = { path="../encoding" }
handshake-script = { path="../script" }

# Known External
extended-primitives = { version="0.3.4", features=["serialization"]}
encodings = "0.1.0"

# Unknown External
cryptoxide = "0.1.1"
sp800-185 = "0.2.0"
bech32 = "0.7.1"
rand = "0.7.2"
sha3 = "0.8.2"

# Optional Feature Gated
serde = { version="1.0", features=["derive"], optional = true}
serde_json = { version="1.0", optional=true}
