[package]
name = "handshake-script"
version = "0.1.0"
authors = ["kilpatty <sean@urkel.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Internal
handshake-protocol = { path="../protocol" }

#Known External
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives.git" }
