[package]
name = "handshake-script"
version = "0.1.0"
authors = ["kilpatty <sean@urkel.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Internal
handshake-encoding = { path="../encoding" }

#Known External
# extended-primitives = "^0.3.1"
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives.git"}

