[package]
name = "handshake-types"
version = "0.1.2-alpha.0"
authors = ["kilpatty <sean@urkel.io>"]
edition = "2018"
license = "MIT"
description = "Handshake types"

[features]
default = []

# The only reason we put PDS behind a feature right is now is that it requires static linking to c++ libraries.
# This breaks some builds on CI, so I'm going to feature flag this for now, until we can get a murmur3 impl in Rust
# and drop the requirement on fasthash in pds.
bloom = ["pds"]
json = ["serde"]

[dependencies]
# Internal
handshake-encoding = { version="^0.1.1", path="../encoding"}

# Known External - I'm going to move these off versioning for now until we need to publish a new version.
extended-primitives = "0.3.4"
pds = { version="0.2.0", optional = true }
encodings = "0.1.0"

# Unknown External
chrono = "0.4"
cryptoxide = "0.1.1"

# Optional Feature Gated
serde = { version="1.0", features=["derive"], optional = true}
serde_json = { version="1.0", optional=true}
